--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "spinners-react": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
